@@ -18,6 +18,10 @@ lbcd 3.5.0 (unreleased)
     Implement lbcd -l, which now logs to syslog each incoming client
     request and its protocol version.
 
+    lbcd now supports IPv6.  The bind address given with -b may be an IPv6
+    address, and by default it listens to both IPv4 and IPv6 addresses on
+    hosts that support IPv6.
+
     Add support for systemd.  If built on a system with systemd installed,
     lbcd will install (but not enable) systemd units to start lbcd via
     socket activation.  lbcd will also notify systemd when its
